// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty expenses  1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item  list-item--message"
    >
      <span>
        No Expenses To show
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses  1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={200}
      createdAt={0}
      description="Coke"
      id="1"
      key="1"
      note="yummy"
    />
    <ExpenseListItem
      amount={700}
      createdAt={-604800000}
      description="Bamba"
      id="2"
      key="2"
      note="Osem"
    />
    <ExpenseListItem
      amount={3000}
      createdAt={604800000}
      description="fifa"
      id="3"
      key="3"
      note="ea"
    />
  </div>
</div>
`;
